Added shaders, resources, and a build script

--- a/Craftcppdemo.vcxproj
+++ b/Craftcppdemo.vcxproj
@@ -99,6 +99,12 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <PostBuildEvent>
+      <Command>call "$(SolutionDir)copy_to_output.bat"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Copy resources and libs to the output dir</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
