--- a/Craftcppdemo.vcxproj
+++ b/Craftcppdemo.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="Fbo.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Frustum.h" />
+    <ClInclude Include="GuiRenderer.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="PostProcessing.h" />
@@ -227,6 +228,7 @@
     <ClCompile Include="Fbo.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Frustum.cpp" />
+    <ClCompile Include="GuiRenderer.cpp" />
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="PostProcessing.cpp" />
     <ClCompile Include="Raycast.cpp" />
