--- a/Craftcppdemo.vcxproj
+++ b/Craftcppdemo.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="GuiImageButton.h" />
     <ClInclude Include="GuiPause.h" />
     <ClInclude Include="GuiRenderer.h" />
+    <ClInclude Include="GuiRespawn.h" />
     <ClInclude Include="ImageRenderer.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="Position.h" />
@@ -239,6 +240,7 @@
     <ClCompile Include="GuiImageButton.cpp" />
     <ClCompile Include="GuiPause.cpp" />
     <ClCompile Include="GuiRenderer.cpp" />
+    <ClCompile Include="GuiRespawn.cpp" />
     <ClCompile Include="ImageRenderer.cpp" />
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="PostProcessing.cpp" />
