--- a/Craftcppdemo.vcxproj
+++ b/Craftcppdemo.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{9DACF959-5007-460E-9153-AD7E67531659}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Craftcppdemo</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -191,6 +191,7 @@
     <ClInclude Include="GuiSettings.h" />
     <ClInclude Include="ImageRenderer.h" />
     <ClInclude Include="lodepng.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Position.h" />
     <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="Raycast.h" />
@@ -203,6 +204,7 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureIds.h" />
     <ClInclude Include="Title.h" />
+    <ClInclude Include="Vbo.h" />
     <ClInclude Include="VboBuilder.h" />
     <ClInclude Include="World.h" />
     <ClInclude Include="Section.h" />
@@ -250,6 +252,7 @@
     <ClCompile Include="GuiSettings.cpp" />
     <ClCompile Include="ImageRenderer.cpp" />
     <ClCompile Include="lodepng.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PostProcessing.cpp" />
     <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="Settings.cpp" />
@@ -258,6 +261,7 @@
     <ClCompile Include="ShadowMapRenderer.cpp" />
     <ClCompile Include="Skybox.cpp" />
     <ClCompile Include="TextureIds.cpp" />
+    <ClCompile Include="Vbo.cpp" />
     <ClCompile Include="VboBuilder.cpp" />
     <ClCompile Include="World.cpp" />
     <ClCompile Include="Section.cpp" />
