--- a/Craftcppdemo.vcxproj.filters
+++ b/Craftcppdemo.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClInclude Include="Vbo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Textures.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
